CWrapper/RHI/RHI.h

typedef struct LunaRhiTextureDesc
{
    uint32_t type;
    uint32_t format;
    uint32_t width;
    uint32_t height;
    uint32_t depth;
    uint32_t array_size;
    uint32_t mip_levels;
    uint32_t sample_count;
    uint32_t usages;
    uint32_t flags;
} LunaRhiTextureDesc;
typedef struct LunaRhiTextureViewDesc
{
    void* texture;
    uint32_t type;
    uint32_t format;
    uint32_t mip_slice;
    uint32_t mip_size;
    uint32_t array_slice;
    uint32_t array_size;
} LunaRhiTextureViewDesc;
typedef struct LunaRhiSamplerDesc
{
    uint32_t min_filter;
    uint32_t mag_filter;
    uint32_t mip_filter;
    uint32_t address_u;
    uint32_t address_v;
    uint32_t address_w;
    int32_t anisotropy_enable;
    int32_t compare_enable;
    uint32_t compare_function;
    uint32_t border_color;
    uint32_t max_anisotropy;
    float min_lod;
    float max_lod;
} LunaRhiSamplerDesc;
LUNA_RHI_C_API luna_errcode_t luna_rhi_descriptor_set_update_texture_view(void* self, uint32_t binding_slot, uint32_t first_array_index, uint32_t descriptor_type, const LunaRhiTextureViewDesc* views, uint32_t view_count);
LUNA_RHI_C_API luna_errcode_t luna_rhi_descriptor_set_update_sampler(void* self, uint32_t binding_slot, uint32_t first_array_index, const LunaRhiSamplerDesc* samplers, uint32_t sampler_count);
LUNA_RHI_C_API luna_errcode_t luna_rhi_texture_get_desc(void* self, LunaRhiTextureDesc* out_desc);