Managed/RHI/Internal/RhiNative.cs


    [DllImport(LibraryName, EntryPoint = "luna_rhi_descriptor_set_update_texture_view")]
    internal static extern UIntPtr DescriptorSetUpdateTextureView(
        IntPtr descriptorSet,
        uint bindingSlot,
        uint firstArrayIndex,
        uint descriptorType,
        [In] NativeTextureViewDesc[]? views,
        uint viewCount);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_descriptor_set_update_sampler")]
    internal static extern UIntPtr DescriptorSetUpdateSampler(
        IntPtr descriptorSet,
        uint bindingSlot,
        uint firstArrayIndex,
        [In] NativeSamplerDesc[]? samplers,
        uint samplerCount);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_texture_get_desc")]
    internal static extern UIntPtr TextureGetDesc(IntPtr texture, out NativeTextureDesc outDesc);
}
